--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 :root{
-    /* ===== Colors ===== */
+    /* ====== Colors ====== */
     --body-color: #E4E9F7;
     --sidebar-color: #FFF;
     --primary-color: #695CFE;
